--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="12"
         android:targetSdkVersion="18" />
 
     <application
@@ -12,6 +12,23 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+         <activity
+            android:name="com.grp6.gestage.MainActivity"
+            android:configChanges="orientation"
+            android:label="GESTAGE"
+            android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="comgrp6.gestage.LoginActivity"
+            android:configChanges="orientation"
+            android:label="Connexion"
+            android:screenOrientation="landscape" >
+        </activity>
     </application>
 
 </manifest>
